@@ -5,7 +5,6 @@ import com.mongodb.lang.Nullable;
 import dev.morphia.MorphiaDatastore;
 
 import org.bson.BsonWriter;
-import org.bson.codecs.Codec;
 import org.bson.codecs.EncoderContext;
 
 public class ValueExpression extends Expression implements SingleValuedExpression {
@@ -16,18 +15,13 @@ public class ValueExpression extends Expression implements SingleValuedExpressio
         object = value;
     }
 
-    @Override
-    public void encode(MorphiaDatastore datastore, BsonWriter writer, EncoderContext encoderContext) {
-        if (object != null) {
-            Codec codec = datastore.getCodecRegistry().get(object.getClass());
-            encoderContext.encodeWithChildContext(codec, writer, object);
-        } else {
-            writer.writeNull();
-        }
+    @Nullable
+    public Object object() {
+        return object;
     }
 
     @Override
     public String toString() {
-        return String.format("ValueExpression{value=%s}", getValue());
+        return "ValueExpression{value=%s}".formatted(object);
     }
 }
